# Flux-Titan-

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  __init__.py  argv.json  check_models.py  debug_telegram.py  docker-compose.yml  get_updates.py  main.py  main_fixed.py  main_simple.py  processed.db  pyproject.toml  requirements.txt  test_gemini.py  test_only_gemini.py  test_telegram.py
.github/: ISSUE_DRAFTS.md  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  news_bot.yml
examples/: README.md  crypto_monitor.env  feeds.yaml  tech_news.env
extensions/: extensions.json
extensions/github.copilot-1.388.0/: package.json
extensions/github.copilot-chat-0.35.2/: package.json
opus-sync/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json
opus-sync/.github/workflows/: ci.yml
opus-sync/migrations/: 001_create_leads.sql
opus-sync/scripts/: run-migrations.js
opus-sync/src/: app.js  config.js  db.js  index.js
opus-sync/src/middleware/: errorHandler.js
opus-sync/src/queue/: queue.js  worker.js
opus-sync/src/routes/: download.js  status.js  upload.js
opus-sync/src/services/: ffmpeg.js  hash.js  s3.js
price-monitor/: .env.example  .gitignore  bootstrap.bat  check_now.bat  configure.bat  configure_env.py  force_notify.bat  price_monitor.py  requirements.txt  run.bat  setup.bat  targets.json
realtor-leads-webhook/: .env.example  README.md  index.js  package.json
src/: __init__.py  config.py  database.py  image_extractor.py  rss_parser.py  summarizer.py  telegram_bot.py
src/flux_titan/: __init__.py  cli.py  config.py  evaluator.py  feeds.py  image_extractor.py  semantic_filter.py
src/flux_titan/publishers/: telegram.py
src/flux_titan/storage/: sqlite.py
src/flux_titan/summarizers/: base.py  gemini.py  kimi.py  openai.py
telegram-lead-bot/: .env.example  bot.py
tests/: test_bot_e2e.py  test_config_yaml.py  test_database.py  test_feeds.py  test_image_extractor.py  test_openai.py  test_summarizer_integration.py  test_telegram_integration.py
